# templates

./: .gitignore  README.md
cxx_demo/: Cargo.toml  build.rs
cxx_demo/src/: demo.cpp  demo_c.c  main.rs
hello_egui/: .gitignore  Cargo.toml  run_win.bat
hello_egui/assets/Cascadia_Code/: install.json
hello_egui/src/: main.rs
hello_python/: demo.py  hello.py
rpc_simple/: Cargo.toml
rpc_simple/src/: client.rs  lib.rs  server.rs  subpub.rs
rust-to-cmake/: build.rs
rust-to-cmake/libdouble/: CMakeLists.txt
rust-to-cmake/libdouble/src/: double.cpp
rust-to-cmake/src/: main.rs
simple_cpp_compile/: bar.cpp  build.sh  foo.cpp  foo.h
tui_simple/: Cargo.toml
tui_simple/src/: app.rs  main.rs
