[package]
name = "cxx_demo"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "0.3"

[build-dependencies]
cxx-build = "0.3.4"
cc = { version = "1.0", features = ["parallel"] }
