[package]
name = "tui_simple"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
dotenv = "0.15.0"
crossterm = "0.17.4"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.11"
paste = "0.1.12"
